# IhateExam

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  convert_into_md.sh  create_vectorstore.py  ingest_docs.sh  prompt.py  pyproject.toml  requirements.txt
